[gd_scene load_steps=2 format=3 uid="uid://h1owcl14ci8q"]

[ext_resource type="Script" path="res://scripts/shot_sound_audio_players.gd" id="1_otu7p"]

[node name="shot_sound_audio_players" type="Node3D"]
script = ExtResource("1_otu7p")

[node name="audioPlayer1" type="AudioStreamPlayer3D" parent="."]
volume_db = -50.0

[node name="audioPlayer2" type="AudioStreamPlayer3D" parent="."]
volume_db = -50.0

[node name="audioPlayer3" type="AudioStreamPlayer3D" parent="."]
volume_db = -50.0
